# SWM_int_a1_ebookings

./: DETAILED_README.md
R2_int_a1_ebookings/: .gitignore  GitVersion.yml  README.md  bandit.yaml  pyproject.toml  python-code-check.sh  r2_int_a1_template.yaml  samconfig.toml
R2_int_a1_ebookings/functions/: BRQParser.py  common_utils.py  email_msg_config.json  s3_utils.py  simple_table.py
R2_int_a1_ebookings/functions/a1_2/: SalesAreaMap.py  call_spot_prebooking.py  check_s3_files.py  create_task_update_opportunity.py  create_update_integration_job.py  generate_result_report.py  get_brq_file.py  prepare_campaign_header_payload.py  prepare_spot_payload.py  push_to_lqs.py  report_failed.py  task_integration_job_campaign_header_creation.py  task_integration_job_spots_prebooking_api.py  update_campaign_header.py  upload_report_to_task_opportunity.py
R2_int_a1_ebookings/functions/brq_file_parser/: a1_eBooking_brq_file_parser_function.py  create_sf_opp.py  parse_brq_file.py  resolve_brq_file_name.py  validate_brq_data.py
R2_int_a1_ebookings/functions/ebooking_event_receiver/: a1_eBooking_file_event_receiver_function.py
R2_int_a1_ebookings/functions/validation_engine/: validate_brq_request_id.py  validate_brq_split.py  (+12 more)
R2_int_a1_ebookings/pipelines/: r2_int_a1_pipeline.yaml
R2_int_a1_ebookings/statemachine/: a1_ebooking_header_processing.asl.json  a1_ebooking_validation_engine.asl.json  ebooking_spot_preprocessing.asl.json  ebooking_spot_processing.asl.json
R2_int_a1_ebookings/tests/: mock_boto.py  test_brq_parser.py  test_resolve_brq_file_name.py
(+42 files in other folders)
