[tool.poetry]
name = "R2_int_a1_integration"
version = "0.1.0"
description = ""
authors = ["Alex Yeung <alex.yeung@cognizant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.39.0"
botocore = "^1.39.9"
uuid = "^1.30"
multipart = "^0.2.4"
datetime = "^5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
